Update thirdparty llvm from 3.4 to 3.7
This updates our thirdparty LLVM version from 3.4 to 3.7. Major changes:

* ASAN and TSAN builds now use the thirdparty clang instead of the bootstrapping
  clang toolchain. The clang toolchain has been removed from the build process.
* Python 2.7 is now built in thirdparty on systems which have a different system
  Python version. Python 2.7 is a build dependency of LLVM 3.6+.
* Updated LLVM API calls in the codegen module.

Change-Id: I9023dd138373bb580892877e437b9199b690bde3

--- a/src/kudu/codegen/CMakeLists.txt
+++ b/src/kudu/codegen/CMakeLists.txt
@@ -45,7 +45,7 @@ add_definitions(-DLLVM_SUPPORT_VALGRIND_H)
 if (${LLVM_PACKAGE_VERSION} VERSION_LESS 3.5)
   llvm_map_components_to_libraries(llvm_LIBRARIES "${LLVM_REQ_COMPONENTS}")
 else()
-  llvm_map_components_to_libnames(llvm_LIBRARIES "${LLVM_REQ_COMPONENETS}")
+  llvm_map_components_to_libnames(llvm_LIBRARIES "${LLVM_REQ_COMPONENTS}")
 endif()
 
 #######################################
