Add google breakpad support to Kudu
Change-Id: I495695cc38b75377f20b0497093a81ed5baa887f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -828,6 +828,12 @@ ADD_THIRDPARTY_LIB(crcutil
   STATIC_LIB "${CRCUTIL_STATIC_LIB}"
   SHARED_LIB "${CRCUTIL_SHARED_LIB}")
 
+## breakpad
+find_package(BreakpadClient REQUIRED)
+include_directories(SYSTEM ${BREAKPAD_CLIENT_INCLUDE_DIR})
+ADD_THIRDPARTY_LIB(breakpad_client
+  STATIC_LIB "${BREAKPAD_CLIENT_STATIC_LIB}")
+
 ## llvm
 # Note that llvm has a unique cmake setup. See kudu/codegen/CMakeLists.txt
 # for details.
